@startuml
class twisk.monde.Activite {
- int temps
- int ecartTemps
+ boolean estUneActivite()
+ int getTemps()
+ void setTemps(int)
+ int getEcartTemps()
+ void setEcartTemps(int)
+ String toString()
+ String toC()
+ int getNbTicketSiGuichet()
+ int getNumSem()
}
class twisk.monde.Monde {
- SasEntree sasE
- SasSortie sasS
- GestionnaireEtapes ge
+ void aCommeEntree(Etape)
+ void aCommeSortie(Etape)
+ void ajouter(Etape)
+ int nbEtapes()
+ int nbGuichets()
+ Iterator<Etape> iterator()
+ String toString()
+ String toC()
+ int getNbTicketsGuichetI(int)
+ String getNomEtapeI(int)
+ int getNumSasSortie()
+ Etape getEtapeI(int)
}
class twisk.monde.SasSortie {
+ String toC()
}
abstract class twisk.monde.Etape {
# GestionnaireSuccesseurs gestsucc
# String nom
# int num
+ void ajouterSuccesseur(Etape)
+ int nbSuccesseurs()
+ boolean estUneActivite()
+ boolean estUnGuichet()
+ Iterator<Etape> iterator()
+ String getNom()
+ int getNum()
+ {abstract}String toC()
+ GestionnaireSuccesseurs getGestsucc()
+ Etape getSucc()
+ {abstract}int getNbTicketSiGuichet()
+ {abstract}int getNumSem()
}
class twisk.monde.Guichet {
- int nbJetons
- int numSemaphore
+ boolean estUnGuichet()
+ int getNbJetons()
+ void setNbJetons(int)
+ int getNumSemaphore()
+ void setNumSemaphore(int)
+ String toString()
+ String toC()
+ int getNbTicketSiGuichet()
+ int getNumSem()
}
class twisk.monde.GestionnaireEtapes {
- ArrayList<Etape> etapes
+ void ajouter(Etape)
+ int nbEtapes()
+ Iterator<Etape> iterator()
+ String toString()
}
class twisk.monde.GestionnaireSuccesseurs {
- ArrayList<Etape> succ
+ void ajouter(Etape)
+ int nbEtapes()
+ Iterator<Etape> iterator()
+ Etape getSucc()
+ String toString()
}
class twisk.monde.SasEntree {
+ String toC()
}
class twisk.monde.ActiviteRestreinte {
+ String toC()
}


twisk.monde.Etape <|-- twisk.monde.Activite
twisk.monde.Iterable <|.. twisk.monde.Monde
twisk.monde.Activite <|-- twisk.monde.SasSortie
twisk.monde.Iterable <|.. twisk.monde.Etape
twisk.monde.Etape <|-- twisk.monde.Guichet
twisk.monde.Iterable <|.. twisk.monde.GestionnaireEtapes
twisk.monde.Iterable <|.. twisk.monde.GestionnaireSuccesseurs
twisk.monde.Activite <|-- twisk.monde.SasEntree
twisk.monde.Activite <|-- twisk.monde.ActiviteRestreinte
@enduml